[improved] enable Tabs overflow content, resolves #833, #901

--- a/less/ui.tabs.less
+++ b/less/ui.tabs.less
@@ -72,6 +72,14 @@
 // @since 2.5
 .@{ns}tabs-bd-ofv {
   overflow: visible;
+
+  > .@{ns}tab-panel {
+    display: none;
+
+    &.@{ns}active {
+      display: block;
+    }
+  }
 }
 
 // fade animation in React version
